--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,8 +49,13 @@ dependencies {
     // Declare the dependency for the Firebase Authentication library
     // When using the BoM, you don't specify versions in Firebase library dependencies
     implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.firebase:firebase-database'
 }
 
 dependencies {
     implementation 'com.google.firebase:firebase-auth:21.0.1'
+}
+
+dependencies {
+    implementation 'com.google.firebase:firebase-database:20.0.3'
 }
